--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,1 +1,7 @@
-<p>category works!</p>
+
+<div class="list-group">
+    <a href="" class="list-group-item list-group-item-action active" >Macera</a>
+    <a href="" class="list-group-item list-group-item-action" >Komedi</a>
+    <a href="" class="list-group-item list-group-item-action" >Romantik</a>
+
+  </div>
