--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,7 +1,7 @@
 
-<div class="list-group">
-    <a href="" class="list-group-item list-group-item-action active" >Macera</a>
-    <a href="" class="list-group-item list-group-item-action" >Komedi</a>
-    <a href="" class="list-group-item list-group-item-action" >Romantik</a>
+<div class="list-group" *ngFor="let category of categories">
+    <!-- <a href="" class="list-group-item list-group-item-action active" >Macera</a> -->
+    <a href="" class="list-group-item list-group-item-action" >{{ category }}</a>
+
 
   </div>
