--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,20 +1,74 @@
-<div class="card mb-3" *ngFor="let movie of movies">
-    <div class="row g-0">
-      <div class="col-md-3">
-        <img src="/assets/img/{{movie.imageUrl}}" class="img-fluid rounded-start" alt="...">
-      </div>
-      <div class="col-md-9">
-        <div class="card-body">
-          <h5 class="card-title">{{movie.title}}</h5>
-          <p class="card-text">{{movie.description}}</p>
-          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-          <button class="btn btn-sm btn-primary">Details</button>
+<div *ngIf="movies.length>0; else no_movies">
+<h3 >{{title}}</h3>
+
+<div class="alert alert-success" *ngIf="movies.length>0">
+    {{movies.length}} movies found
+</div>
+<ng-template [ngTemplateOutlet]="movieList1"></ng-template>
+<ng-template [ngTemplateOutlet]="movieList2"></ng-template>
+<ng-template [ngTemplateOutlet]="movieList3" [ngTemplateOutletContext]="{ movies:movieRepository.getMovies() }"></ng-template>
+</div>
+<!-- <div class="alert alert-danger" *ngIf="movies.length==0">
+  No movies found
+</div> -->
+<ng-template class="alert alert-danger" #no_movies>
+  No movies found
+</ng-template>
+
+<ng-template #movieList1>
+  <div class="card mb-3" *ngFor="let movie of movies">
+      <div class="row g-0">
+        <div class="col-md-3">
+          <img src="/assets/img/{{movie.imageUrl}}" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-9">
+          <div class="card-body">
+            <h5 class="card-title">{{movie.title}}</h5>
+            <p class="card-text">{{movie.description}}</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+            <button class="btn btn-sm btn-primary">Details</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
- 
+  </ng-template>
 
-  <!-- <ul>
-    <li *ngFor="let item of movies">{{item}}</li>
-  </ul> -->
+  <ng-template #movieList2>
+    <div class="card mb-2" *ngFor="let movie of movies">
+        <div class="row g-0">
+          <div class="col-md-3">
+            <img src="/assets/img/{{movie.imageUrl}}" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-10">
+            <div class="card-body">
+              <h5 class="card-title">{{movie.title}}</h5>
+              <p class="card-text">{{movie.description}}</p>
+              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              <button class="btn btn-sm btn-primary">Details</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+    <!--
+dısarıdan dınamık verı alan template
+    -->
+
+    <ng-template #movieList3 let-popularMovies="movies">
+      <h2>Popular Movies</h2>
+      <div class="card mb-2" *ngFor="let movie of popularMovies">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="/assets/img/{{movie.imageUrl}}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-10">
+              <div class="card-body">
+                <h5 class="card-title">{{movie.title}}</h5>
+                <p class="card-text">{{movie.description}}</p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <button class="btn btn-sm btn-primary">Details</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </ng-template>
