--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -4,12 +4,9 @@
 <div class="alert alert-success" *ngIf="movies.length>0">
     {{movies.length}} movies found
 </div>
-<ng-template [ngTemplateOutlet]="movieList2" [ngTemplateOutletContext]="{ movies:popularMovies }"></ng-template>
 <ng-template [ngTemplateOutlet]="movieList1"></ng-template>
 </div>
-<!-- <div class="alert alert-danger" *ngIf="movies.length==0">
-  No movies found
-</div> -->
+
 <ng-template class="alert alert-danger" #no_movies>
   No movies found
 </ng-template>
@@ -23,9 +20,9 @@
         </div>
         <div class="col-md-9">
           <div class="card-body">
-            <h5 class="card-title">{{movie.title}}</h5>
+            <h5 class="card-title">{{movie.title | titlecase}}</h5>
             <p class="card-text">{{movie.description}}</p>
-            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+            <p class="card-text"><small class="text-body-secondary">{{movie.datePublished | date :'dd/MM/y'}}</small></p>
             <button class="btn btn-sm btn-primary">Details</button>
           </div>
         </div>
@@ -33,47 +30,36 @@
     </div>
   </ng-template>
 
-  <ng-template #movieList2 let-listMovies="movies">
-    <h2>Popular Movies</h2>
-    <div class="row row-cols-1 row-cols-md-3 g-4 mb-3">
-      <div class ="col" *ngFor="let movie of listMovies">
-      <div class="card h-100">
-        <img src="/assets/img/{{movie.imageUrl}}" class="card-img-top" alt="...">
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">{{movie.title}}</h5>
-        <p class="card-text">{{movie.description}}</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-        <button class="btn btn-sm btn-primary">Details</button>
-      </div>
-    </div>
-    </div>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    </ng-template>
-    <!--
-dısarıdan dınamık verı alan template
-    -->
+  <h4>lower-upper-title pipe</h4>
+  <p>{{'hello world' | lowercase}}</p>
+  <p>{{'hello world' | uppercase}}</p>
+  <p>{{'hello world' | titlecase}}</p>
 
-    <!-- <ng-template #movieList3 let-popularMovies="movies">
-      <h2>Popular Movies</h2>
-      <div class="card mb-2" *ngFor="let movie of popularMovies">
-          <div class="row g-0">
-            <div class="col-md-3">
-              <img src="/assets/img/{{movie.imageUrl}}" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">{{movie.title}}</h5>
-                <p class="card-text">{{movie.description}}</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                <button class="btn btn-sm btn-primary">Details</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </ng-template> -->
+  <h4>currency pipe</h4>
+  <p>{{1234.567 | currency}}</p>
+  <p>{{1234.567 | currency:'EUR'}}</p>
+  <p>{{1234.567 | currency:'EUR':'code'}}</p>
+  <p>{{1234.567 | currency:'EUR':'symbol'}}</p>
+  <p>{{1234.567 | currency:'EUR':'symbol-narrow'}}</p>
+
+  <h4>date pipe</h4>
+  <p>{{today | date}}</p>
+  <p>{{today | date:'dd/MM/y'}}</p>
+  <p>{{today | date:'dd/MM/y hh:mm:ss'}}</p>
+  <p>{{today | date:'dd/MM/y hh:mm:ss a'}}</p>
+  <p>{{today | date:'dd/MM/y hh:mm:ss a Z'}}</p>
+  <p>{{today | date:'dd/MM/y hh:mm:ss a Z':'GMT'}}</p>
+  <p>{{today | date:'dd/MM/y hh:mm:ss a Z':'GMT+2'}}</p>
+  <p>{{today | date: 'fullDate' }}</p>
+  <!-- Wednesday, October 25, 2023 olarak göründü localize etmemız lazım, angular.json ıcınde i18n eklenır ve ng add @angular/localize eklenır-->
+  <p>{{today | date: 'shortDate' }}</p>
+
+  <h4>decimal pipe</h4>
+  <p>{{1234.567 | number}}</p>
+  <p>{{1234.567 | number:'1.2-3'}}</p>
+  
+
+
+
+
+  
