movie-filter add

--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -4,6 +4,12 @@
 <div class="alert alert-success" *ngIf="movies.length>0">
     {{movies.length}} movies found
 </div>
+
+<div class="mb-3">
+  <input type="text" class="form-control" [(ngModel)]="filterText" placeholder="Search">
+  <small class="text-muted" *ngIf="filterText">Search by : {{filterText}}</small>
+</div>
+
 <ng-template [ngTemplateOutlet]="movieList1"></ng-template>
 </div>
 
@@ -13,7 +19,7 @@
 
 <ng-template #movieList1>
   <h2>Movies</h2>
-  <div class="card mb-3" *ngFor="let movie of movies">
+  <div class="card mb-3" *ngFor="let movie of movies | filterMovie:filterText">
       <div class="row g-0">
         <div class="col-md-3">
           <img src="/assets/img/{{movie.imageUrl}}" class="img-fluid rounded-start" alt="...">
