--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+@import "~alertifyjs/build/css/alertify.css";
+@import "~alertifyjs/build/css/themes/bootstrap.min.css";
+@import "~alertifyjs/build/css/themes/default.min.css";
