--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -28,7 +28,7 @@
           <div class="card-body">
             <h5 class="card-title">{{movie.title | titlecase}}</h5>
             <p class="card-text">{{movie.description | summary }}</p>
-            <p class="card-text"><small class="text-body-secondary">{{movie.datePublished | date :'dd/MM/y'}}</small></p>
+            <!-- <p class="card-text"><small class="text-body-secondary">{{movie.datePublished | date :'dd/MM/y'}}</small></p> -->
             <button class="btn btn-sm btn-primary" (click)="btClick()">Details</button>
           </div>
         </div>
