--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-danger" *ngIf="error">
+  {{error}}
+</div>
 <div *ngIf="movies.length>0; else no_movies">
 <h3 >{{title}}</h3>
 
