--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -21,7 +21,7 @@
 </ng-template>
 
 <ng-template #movieList1>
-  <h2>Movies</h2>
+  <!-- <h2>Movies</h2> -->
   <div class="card mb-3" *ngFor="let movie of movies | filterMovie:filterText">
       <div class="row g-0">
         <div class="col-md-3">
