--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <app-category></app-category>
   </div>
   <div class="col-md-9">
-    <app-movies></app-movies>
+    <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
 
