--- a/src/app/components/movies/movie-details/movie-details.component.html
+++ b/src/app/components/movies/movie-details/movie-details.component.html
@@ -1,1 +1,22 @@
-<p>movie-details works!</p>
+<div *ngIf="movie else no_movie">
+    <div class="card">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="/assets/img/{{movie.imageUrl}}" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h2>{{movie.title | titlecase}}</h2>
+                <P class="card-text">{{movie.description}}</P>
+            </div>
+        </div>
+
+    </div>
+</div>
+</div>
+
+<ng-template class="alert alert-danger" #no_movie>
+    <div class="alert alert-danger">
+    No movies found
+    </div>
+  </ng-template>
