--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,9 @@
         <li class="nav-item">
           <a [routerLink]="['/movies']"  class="nav-link">Movies</a>
         </li>
+        <li class="nav-item">
+          <a [routerLink]="['/movie-create']"  class="nav-link">Movie Create</a>
+        </li>
       </ul>
     </div>
   </nav>
