--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -33,6 +33,7 @@
             <p class="card-text">{{movie.description | summary }}</p>
             <!-- <p class="card-text"><small class="text-body-secondary">{{movie.datePublished | date :'dd/MM/y'}}</small></p> -->
             <a [routerLink]="['/movies', movie.id]"  class="btn btn-sm btn-primary">Details</a>
+            <button (click)="deleteMovie(movie.id)" class="btn btn-sm btn-danger">Delete</button>  <!-- Delete butonu -->
           </div>
         </div>
       </div>
